--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -10,19 +10,23 @@
   background-position: center;
 
   .content {
+    width: 100%;
+    height: 250px;
     font-family: "Open Sans";
     text-align: center;
     padding: 10px;
+    padding-top: 25%;
     opacity: 0;
     transition: all 500ms ease-in-out;
     transform: translate(0, 20px);
     cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.6);
     h1 {
-      font-size: 14px;
+      font-size: 16px;
       color: white;
     }
     p {
-      font-size: 10px;
+      font-size: 12px;
       color: white;
       margin-bottom: 20px;
     }
