--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -10,8 +10,8 @@
 @import "./header.scss";
 @import "./work.scss";
 @import "./about.scss";
-@import "./skills.scss";
 @import "./promotion.scss";
+@import "./article.scss";
 @import "./footer.scss";
 
 * {
